# SZU_Math_and_Computer

./: README.md
公共课/: README.md
公选课/: README.md
公选课/形策/: 申论.txt
公选课/毛概/: 2023毛概考点.txt
公选课/流行音乐基础乐理/: README.md
公选课/马原/: 课堂作业.txt  马原教材课后题答案.docx  马原期末回忆 (2023 秋).txt  马原期末考回忆 (2023.6).docx
数学课/: README.md
数学课/图像处理的数学方法/: README.md  期末重点.txt
数学课/常微分方程/: README.md
数学课/数值分析/: README.md
数学课/数学分析(2)/: README.md
数学课/数学分析(3)/: README.md
数学课/概率论与数理统计/: README.md
数学课/离散数学/: 2022年期末重点.txt  README.md  期中考代码.cpp  期末2022项目1开题报告模板.doc  论文结构与pre要求.txt
数学课/运筹学/: 2023年运筹学期末考点.txt  README.md  作业涉及的知识点.txt  深圳大学期末考试试卷.docx
数学课/随机过程/: README.md
数学课/高等代数(1)/: README.md
数学课/高等代数(2)/: README.md
物理课/: README.md
物理课/大学物理(2)/: README.md
物理课/大物实验(1)/: 2022年大学物理实验1绪论-YD.pptx  83-20-王曦-不良导体热导率的测量.docx  83-20-王曦-偏振光的观察与研究.docx  83-20-王曦-单摆的研究.docx  83-20-王曦-太阳能电池的特性测量.docx  83-20-王曦-实验报告模板.docx  83-20-王曦-热敏电阻温度特性研究.docx  83-20-王曦-用phyphox测量地磁场.docx  83-20-王曦-碰撞实验.docx  不良导体热导率数据.xlsx  偏振光数据.xlsx  大物实验报告模板.docx  太阳能电池数据.xlsx  实验1   单摆的研究.docx  实验1 单摆实验研究(1).pptx  实验3、虚拟仿真实验--热敏电阻温度特性研究实验.pptx  实验6 虚拟仿真实验--不良导体热导率的测量(1).pptx  实验七 几何光学综合实验 - YD.ppt  实验六 多普勒测声速 -YD.pptx  新-实验7 虚拟仿真实验--太阳能电池的特性测量-YD.pptx  热敏电阻温度特性研究数据.xlsx
物理课/大物实验(2)/: 1 利用霍尔元件测磁场.ppt  1 霍尔效应及其应用.doc  10 干涉法测热膨胀系数.doc  10 干涉法测热膨胀系数.pptx  2 弗兰克-赫兹实验.doc  2 弗兰克-赫兹实验.ppt  3 光栅光谱仪的使用.doc  4 双光栅测微振动.pptx  4 金属电子逸出功.doc  4 金属电子逸出功的测定.pptx  5 RLC串联谐振.doc  6 双光栅测微振动.pptx  7 密立根油滴.pptx  7 密立根油滴实验.doc  8 表面张力系数的测定.doc  8 表面张力系数的测定.pptx  RLC串联谐振.xlsx  (+18 more)
英语课/: README.md
计算机安全导论、网络安全/: README.md
计算机课/: README.md
计算机课/计算机图形学/实验/实验1/实验指导/实验一留空代码/: CMakeLists.txt  main.cpp
计算机课/计算机图形学/实验/实验1/实验指导/实验一留空代码/include/: Angel.h  CheckError.h
计算机课/计算机视觉/作业/实验一：图像增强应用实践/计算机视觉-2022280486-周睿星-实验报告1-其他/code/: CMakeLists.txt  main.cpp
计算机课/计算机视觉/作业/实验一：图像增强应用实践/计算机视觉-2022280486-周睿星-实验报告1-其他/code/include/: ImageProcess.h
计算机课/计算机视觉/作业/实验一：图像增强应用实践/计算机视觉-2022280486-周睿星-实验报告1-其他/code/src/: ImageProcess.cpp
计算机课/计算机视觉/作业/实验二：路沿检测/计算机视觉-2022280486-周睿星实验报告2-其他/lab2/: CMakeLists.txt  main.cpp
计算机课/计算机视觉/作业/实验二：路沿检测/计算机视觉-2022280486-周睿星实验报告2-其他/lab2/lib/: opencv_world490d.lib
转专业考试/: 2022数学基础能力测试模拟题.txt  README.md  高数2022期末.docx
(+1279 files in other folders)
